--- a/style.css
+++ b/style.css
@@ -46,43 +46,57 @@ header {
 }
 
 main {
-  /* background-color: aqua; */
   height: 80vh;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   position: relative;
 }
 
+.start {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .triangle {
-  transform: scale(0.8);
+  transform: scale(1);
 }
 
 .option {
-  width: 100px;
-  height: 100px;
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
   background-color: beige;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
+  cursor: pointer;
 }
 
 .paper {
-  top: 20%;
-  left: 40%;
+  top: 10%;
+  left: 37%;
+  box-shadow: hsl(230, 89%, 65%) 0px 0px 0px 13px inset,
+    0px 7px hsl(230, 89%, 62%);
 }
 .scissors {
-  right: 40%;
-  top: 20%;
+  right: 37%;
+  top: 10%;
+  box-shadow: hsl(40, 84%, 53%) 0px 0px 0px 13px inset,
+    0px 7px hsl(39, 89%, 49%);
 }
 
 .rock {
-  bottom: 20%;
+  bottom: 13%;
   left: 50%;
   transform: translate(-50%, -20%);
+  box-shadow: hsl(349, 70%, 56%) 0px 0px 0px 15px inset,
+    0px 7px hsl(349, 71%, 52%);
 }
 
 button {
