--- a/style.css
+++ b/style.css
@@ -70,10 +70,6 @@ main {
   pointer-events: none;
 }
 
-.triangle {
-  transform: scale(1);
-}
-
 .option {
   width: 140px;
   height: 140px;
@@ -210,6 +206,7 @@ main {
 }
 
 .info p {
+  text-align: center;
   font-size: 42px;
   text-transform: uppercase;
   color: #fff;
@@ -227,6 +224,11 @@ main {
   letter-spacing: 1px;
   text-transform: uppercase;
   color: hsl(229, 25%, 31%);
+  transition: color 0.5s ease-in;
+}
+
+.info button.hover {
+  color: hsl(349, 70%, 56%);
 }
 
 /* CSS FOR THE OVERLAY SECTION  */
@@ -273,4 +275,163 @@ main {
 
 .close {
   cursor: pointer;
+}
+@media only screen and (max-width: 600px) {
+  header {
+    width: 85%;
+    display: flex;
+    border: 2px solid hsl(217, 16%, 45%);
+    padding: 15px;
+    border-radius: 10px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .score-card {
+    width: 25%;
+    height: 100%;
+    padding: 10px 0;
+  }
+
+  .score-card p {
+    font-size: 14px;
+  }
+
+  .score-card span {
+    font-size: 32px;
+    font-weight: 700;
+  }
+
+  .logo {
+    width: 35%;
+    height: 80%;
+  }
+
+  .triangle {
+    width: 60%;
+  }
+
+  .option {
+    width: 130px;
+    height: 130px;
+  }
+
+  .option:nth-child(1) {
+    top: 15%;
+    left: 10%;
+  }
+
+  .option:nth-child(2) {
+    right: 10%;
+    top: 15%;
+  }
+
+  .option:nth-child(3) {
+    bottom: 13%;
+    left: 50%;
+    transform: translate(-50%, -20%);
+  }
+
+  .rules-btn {
+    border-radius: 10px;
+    padding: 10px 20px;
+    align-self: center;
+    margin-right: 0;
+    font-size: 18px;
+  }
+
+  .game {
+    margin-top: 20%;
+    align-items: center;
+    /* justify-content: center; */
+  }
+
+  .game-options {
+    width: 80%;
+    align-items: flex-start;
+  }
+
+  .players {
+    flex-direction: column-reverse;
+  }
+
+  .opt {
+    background-color: #fff;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .opt.paper {
+    box-shadow: hsl(230, 89%, 65%) 0px 0px 0px 13px inset,
+      0px 3px hsl(230, 89%, 62%);
+  }
+
+  .opt.scissors {
+    box-shadow: hsl(40, 84%, 53%) 0px 0px 0px 13px inset,
+      0px 3px hsl(39, 89%, 49%);
+  }
+
+  .opt.rock {
+    box-shadow: hsl(349, 70%, 56%) 0px 0px 0px 13px inset,
+      0px 3px hsl(349, 71%, 52%);
+  }
+
+  .comp-opt {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-top: 20px;
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+
+  .players h3 {
+    margin: 30px 0;
+    text-transform: uppercase;
+    color: #fff;
+    letter-spacing: 1.5px;
+    font-size: 16px;
+  }
+
+  .info {
+    width: 50%;
+    left: 28%;
+    transform: translateX(-28%);
+    bottom: 30%;
+    display: none;
+    position: absolute;
+  }
+
+  .info p {
+    font-size: 42px;
+    font-weight: 700;
+  }
+
+  .info button {
+    padding: 13px 0;
+    font-size: 16px;
+  }
+
+  .rules-div {
+    /* width: 100%;
+    height: 100%;
+    padding: 0; */
+  }
+
+  .rules-div-header {
+    /* width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px; */
+    display: none;
+  }
+
+  .close {
+    position: absolute;
+  }
 }
